procure/aws/network.tf

# VPC
resource "aws_vpc" "node_vpc" {
  cidr_block = "10.0.0.0/16"
  assign_generated_ipv6_cidr_block = true
  enable_dns_support = true
  enable_dns_hostnames = true

  tags = {
    Name = "vpc-${var.instance_name}"
  }
}

# Subnet (with IPv6 capabilities)
resource "aws_subnet" "node_subnet" {
  vpc_id = aws_vpc.node_vpc.id
  cidr_block = cidrsubnet(aws_vpc.node_vpc.cidr_block, 4, 1)
  map_public_ip_on_launch = true

  ipv6_cidr_block = cidrsubnet(aws_vpc.node_vpc.ipv6_cidr_block, 8, 1)
  assign_ipv6_address_on_creation = true

  tags = {
    Name = "subnet-${var.instance_name}"
  }
}

# Network Interface
resource "aws_network_interface" "node_nic" {
  count = var.node_count
  subnet_id = aws_subnet.node_subnet.id
  tags = {
    Name = "${var.instance_name}-${count.index}-nic"
  }
}

# Internet Gateway
resource "aws_internet_gateway" "gateway" {
  vpc_id = aws_vpc.node_vpc.id

  tags = {
    Name = "igw-${var.instance_name}"
  }
}

# Route table to allow access to the Internet Gateway
resource "aws_route_table" "route_table" {
    vpc_id = aws_vpc.node_vpc.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.gateway.id
    }

    route {
        ipv6_cidr_block = "::/0"
        gateway_id = aws_internet_gateway.gateway.id
    }

    tags = {
      Name = "rt-${var.instance_name}"
    }
}

# Associate the route table with the subnet
resource "aws_route_table_association" "rta" {
    subnet_id      = aws_subnet.node_subnet.id
    route_table_id = aws_route_table.route_table.id
}

# Security group
resource "aws_security_group" "security_group" {
  vpc_id = aws_vpc.node_vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = var.ip_allow_ssh
  }

  ingress {
    from_port   = var.ip_allow_http_from_port
    to_port     = var.ip_allow_http_to_port
    protocol    = "tcp"
    # Allow traffic from configured IPs and load balancer
    cidr_blocks = concat(var.ip_allow_http, ["${aws_eip.lb_eip.public_ip}/32"])
  }

  ingress {
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "sg-${var.instance_name}"
  }
}

#------------------------------------------------------------------------------

# Node IPs
resource "aws_eip" "static_ip" {
  count = var.node_count
  depends_on = [aws_internet_gateway.gateway]
  network_interface = aws_network_interface.node_nic[count.index].id
  instance = aws_instance.nodes[count.index].id

  tags = {
    Name = "${var.instance_name}-${count.index}-eip"
  }
}

# Load balancer IP
resource "aws_eip" "lb_eip" {
  tags = {
    Name = "${var.instance_name}-lb-eip"
  }
}

# Use association to break eip -> security group -> load balancer cycle
resource "aws_eip_association" "eip_assoc" {
  instance_id   = aws_instance.load_balancer.id
  allocation_id = aws_eip.lb_eip.id
}
